--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <meta name="Description"
         content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
-    <title>Ishan Sharma</title>
+    <title>Home Green</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="apple-touch-icon" href="assets/img/favicon.png">
     <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
@@ -58,16 +58,17 @@
         </nav>
         <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
-                <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100"
+                <h1 class="hero-tag"><span class="typer" id="main" data-words="INTRODUCCION." data-delay="100"
                         data-deleteDelay="1000" data-loop="1" style="color:blue!important;"></span>
                     &nbsp;</h1>
-                <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living
-                    and also design <b>user experiences</b>.
-                    If you want me to do any one of these for you, get in touch with me here.
+                <p class="hero-des">Bienvenidos al proyecto de automatización de puertas mediante el uso de un sensor de ultrasonido. En este proyecto, utilizaremos un sensor de ultrasonido para detectar la presencia de objetos en la proximidad de la puerta y activar un circuito que abrirá la puerta automáticamente.
+El objetivo principal de este proyecto es brindar una solución eficiente y segura para el acceso a espacios privados o de uso restringido, evitando así la necesidad de tener que abrir manualmente la puerta en cada ocasión.
+Durante el desarrollo de este proyecto, exploraremos los conceptos clave de la automatización y el control de acceso, desde el diseño del circuito y la programación del microcontrolador, hasta la implementación de la solución en un entorno real.
+Esperamos que este proyecto sea útil para aquellos que buscan una solución simple y eficiente para el acceso a espacios restringidos.
                 </p>
                 <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
                 <button class="animated bounce delay-4s learn-btn">
-                    Learn More
+                    OBJETIVOS
                 </button>
                 <a href="contact.html"><button class="contact-btn">
                         Contact Me
