--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <meta name="Description"
         content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
-    <title>Ishan Sharma</title>
+    <title>Home Green</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="apple-touch-icon" href="assets/img/favicon.png">
     <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
@@ -58,19 +58,17 @@
         </nav>
         <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
-                <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100"
+                <h1 class="hero-tag"><span class="typer" id="main" data-words="Bienvenido." data-delay="100"
                         data-deleteDelay="1000" data-loop="1" style="color:blue!important;"></span>
                     &nbsp;</h1>
-                <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living
-                    and also design <b>user experiences</b>.
-                    If you want me to do any one of these for you, get in touch with me here.
+                <p class="hero-des">En esta pestaña encontrara una pequeña guia sobre la pagina 
                 </p>
                 <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
                 <button class="animated bounce delay-4s learn-btn">
-                    Learn More
+                    Leer mas 
                 </button>
                 <a href="contact.html"><button class="contact-btn">
-                        Contact Me
+                        Contactanos 
                     </button></a>
                 <div class="social-icons">
                     <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
