--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="nav-items">
                     <ul>
+                        <li><span><a href="index.html">Home Page</a></span></li>
                         <li><span><a href="features.html">Features</a></span></li>
                         <li><span><a href="video.html">Project Video</a></span></li>
                         <li><span><a href="members.html">Group Members</a></span></li>
