--- a/members.html
+++ b/members.html
@@ -32,6 +32,7 @@
             <center>
                 <div class="nav-items">
                     <ul>
+                        <li><span><a href="index.html">Home Page</a></span></li>
                         <li><span><a href="features.html">Features</a></span></li>
                         <li><span><a href="video.html">Project Video</a></span></li>
                         <li><span><a href="members.html">Group Members</a></span></li>
@@ -55,13 +56,13 @@
                 <p class="hero-des contact-des animated fadeIn delay-1s" style="font-size: larger;">Want to discuss or suggest about the project? Feel free to contact us! <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i
                             ></i></a>
                 </p>
-                <p class="hero-des contact-des animated fadeIn delay-1s">Çağla Kaplan<a target="_blank"><i
+                <p class="hero-des contact-des animated fadeIn delay-1s">Çağla Kaplan - caglakap01@gmail.com<a target="_blank"><i
                    ></i></a>
         </p>
-        <p class="hero-des contact-des animated fadeIn delay-1s">İlayda Şahin <a target="_blank" ><i
+        <p class="hero-des contact-des animated fadeIn delay-1s">İlayda Şahin - ilayda.sahin838@gmail.com <a target="_blank" ><i
             ></i></a>
         </p>
-        <p class="hero-des contact-des animated fadeIn delay-1s">İmre Kosdik <a target="_blank" ><i
+        <p class="hero-des contact-des animated fadeIn delay-1s">İmre Kosdik - imrekosdik@gmail.com <a target="_blank" ><i
             ></i></a>
         </p>
                 <br>
@@ -75,25 +76,7 @@
             </div>
         </div>
     </div>
-    <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger">
-            <div></div>
-        </div>
-        <div class="menu">
-            <div>
-                <div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="work.html">Work</a></li>
-                        <li><a href="#">Uses</a></li>
-                        <li><a disabled href="#" style="text-decoration: line-through;">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+   
 </body>
 
 </html>
