--- a/members.html
+++ b/members.html
@@ -20,10 +20,9 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <meta name="Description"
-        content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
-    <title>Contact | Ishan Sharma</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+   
+    <title>Group Members</title>
+   
 </head>
 
 <body id="contact-body" style="overflow-x: hidden;">
@@ -65,6 +64,20 @@
         <p class="hero-des contact-des animated fadeIn delay-1s">İmre Kosdik - imrekosdik@gmail.com <a target="_blank" ><i
             ></i></a>
         </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        
+        <img class="hero-des2 contact-des animated fadeIn delay-1s" width="200" height="220" src="assets/img/cs.jpg">
+        <br>
+        <br>
+        <p class="hero-des2 contact-des animated fadeIn delay-1s">Hacettepe University Computer Science Department Ankara - Turkey<a target="_blank" ><i
+            ></i></a>
+        </p>
+        
                 <br>
             </div>
         </div>
