--- a/features.html
+++ b/features.html
@@ -20,10 +20,9 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <meta name="Description"
-        content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
-    <title>Work | Ishan Sharma</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+   
+    <title>Features</title>
+    
 </head>
 
 <body id="contact-body" style="overflow-x: hidden;">
