--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <ul>
                         <li><span><a href="index.html">Home Page</a></span></li>
                         <li><span><a href="features.html">Features</a></span></li>
-                        <li><span><a href="video.html">Project Video</a></span></li>
                         <li><span><a href="members.html">Group Members</a></span></li>
                     </ul>
                 </div>
@@ -57,7 +56,7 @@
                 <a href="features.html"><button class="animated bounce delay-4s learn-btn">
                     Learn More
                 </button></a>
-                <a href="video.html"><button class="contact-btn">
+                <a href="https://youtu.be/Ds-Hc32w-9w"><button class="contact-btn">
                         Project Video
                     </button></a>
                 <div class="social-icons">
